[package]
name = "pv"
version = "1.0.0"
authors = ["gerald schenk <gschenk@gmx.net>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
toml = { version = "0.5.6" }
amiquip = { version = "0.3", default-features = false }
chrono = { version = "0.4" }
solarize = { path = "../solarize" }
